--- a/public/stylesheets/views/components/list/_button-list.scss
+++ b/public/stylesheets/views/components/list/_button-list.scss
@@ -1,10 +1,9 @@
-@use '../../../globalSassVars/colors';
+@use "../../../globalSassVars/colors";
 
 .button-list {
-    display: flex;
+  display: flex;
 
-    &.-gap-small {
-        gap: 2rem;
-    }
-    
+  &.-gap-small {
+    gap: 2rem;
+  }
 }
