--- a/views/components/icon/svg/blogPostIcon.pug
+++ b/views/components/icon/svg/blogPostIcon.pug
@@ -1,4 +1,6 @@
 mixin blogPostIcon(attrs={})
-	svg(viewBox="0 0 24 24")&attributes(attrs)
-		path(stroke="none" d="M0 0h24v24H0z")
-		path(d="M3 19a9 9 0 0 1 9 0 9 9 0 0 1 9 0M3 6a9 9 0 0 1 9 0 9 9 0 0 1 9 0M3 6v13M12 6v13M21 6v13")
+  svg(viewBox="0 0 24 24")&attributes(attrs)
+    path(stroke="none", d="M0 0h24v24H0z")
+    path(
+      d="M3 19a9 9 0 0 1 9 0 9 9 0 0 1 9 0M3 6a9 9 0 0 1 9 0 9 9 0 0 1 9 0M3 6v13M12 6v13M21 6v13"
+    )
