--- a/views/components/icon/svg/commentIcon.pug
+++ b/views/components/icon/svg/commentIcon.pug
@@ -1,4 +1,6 @@
 mixin commentIcon(attrs={})
-	svg(viewBox="0 0 24 24")&attributes(attrs)
-		path(stroke="none" d="M0 0h24v24H0z")
-		path(d="M8 9h8M8 13h6M9 18H6a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3h-3l-3 3-3-3z")
+  svg(viewBox="0 0 24 24")&attributes(attrs)
+    path(stroke="none", d="M0 0h24v24H0z")
+    path(
+      d="M8 9h8M8 13h6M9 18H6a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3h-3l-3 3-3-3z"
+    )
