--- a/views/components/list/blogPostFormActionList.pug
+++ b/views/components/list/blogPostFormActionList.pug
@@ -3,55 +3,4 @@ include ../icon/svg/deleteIcon
 include ../icon/svg/saveIcon
 include ../icon/svg/publishIcon
 
-+iconElementList(
-    [{
-        'tag': 'button',
-        'icon': 'deleteIcon',
-        'label': 'Discard',
-        'attrs': {
-            'class': [
-                'blog-post-form__discard-button',
-                'blog-post-form__submit-button',
-            ]
-        }
-    },
-    {
-        'tag': 'button',
-        'icon': 'saveIcon',
-        'label': 'Save',
-        'attrs': {
-            'class': [
-                'blog-post-form__save-button',
-                'blog-post-form__submit-button',
-            ]
-        }
-    },
-    {
-        'tag': 'button',
-        'icon': 'publishIcon',
-        'label': 'Publish',
-        'attrs': {
-            'class': [
-                'blog-post-form__publish-button',
-                'blog-post-form__submit-button',
-            ]
-        }
-    }],
-    {
-        'iconElement': { 
-            'form': 'blog-post-form',
-            'type': 'submit',
-            'class': [
-                '-colorful',
-                '-gap-small',
-                '-padding-even-slim'
-            ]
-        },
-        'iconElementList': {
-            'class': [
-                '-gap-small',
-                '-align-stretch'
-            ]
-        }
-    }
-)
++iconElementList([{ 'tag': 'button', 'icon': 'deleteIcon', 'label': 'Discard', 'attrs': { 'class': [ 'blog-post-form__discard-button', 'blog-post-form__submit-button', ] } }, { 'tag': 'button', 'icon': 'saveIcon', 'label': 'Save', 'attrs': { 'class': [ 'blog-post-form__save-button', 'blog-post-form__submit-button', ] } }, { 'tag': 'button', 'icon': 'publishIcon', 'label': 'Publish', 'attrs': { 'class': [ 'blog-post-form__publish-button', 'blog-post-form__submit-button', ] } }], { 'iconElement': { 'form': 'blog-post-form', 'type': 'submit', 'class': [ '-colorful', '-gap-small', '-padding-even-slim' ] }, 'iconElementList': { 'class': [ '-gap-small', '-align-stretch' ] } })
