--- a/views/components/list/buttonList.pug
+++ b/views/components/list/buttonList.pug
@@ -1,7 +1,5 @@
 mixin buttonList(buttonItems, attrs={})
-    ul.button-list&attributes(attrs.buttonList)
-        each item in buttonItems
-            li.button-list__item
-                button.button-list__button(
-                    class=item.classId
-                )&attributes(attrs.button)= item.label
+  ul.button-list&attributes(attrs.buttonList)
+    each item in buttonItems
+      li.button-list__item
+        button.button-list__button(class=item.classId)&attributes(attrs.button)= item.label
