--- a/public/stylesheets/views/components/card/_comment-card.scss
+++ b/public/stylesheets/views/components/card/_comment-card.scss
@@ -1,45 +1,45 @@
-@use '../../../globalSassVars/colors';
-@use '../../../globalSassVars/font-sizes' as fSizes;
-@use '../../../globalSassVars/icon-sizes' as iSizes;
-@use '../../../globalSassVars/break-points' as bp;
+@use "../../../globalSassVars/colors";
+@use "../../../globalSassVars/font-sizes" as fSizes;
+@use "../../../globalSassVars/icon-sizes" as iSizes;
+@use "../../../globalSassVars/break-points" as bp;
 
 .comment-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid colors.$border;
+
+  &__author-date {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
-    border-bottom: 2px solid colors.$border;
+    align-items: center;
+    gap: 2rem;
+  }
 
-    &__author-date {
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-    }
+  &__content {
+    margin: 0;
+    margin-left: 1rem;
+  }
 
-    &__content {
-        margin: 0;
-        margin-left: 1rem;
-    }
-
-    &__toolbar {
-        display: flex;
-        gap: 3rem;
-    }
+  &__toolbar {
+    display: flex;
+    gap: 3rem;
+  }
 }
 
 @media (max-width: bp.$bp0) {
-    .comment-card {
-        &__toolbar {
-            gap: 0.5rem;
-        }
+  .comment-card {
+    &__toolbar {
+      gap: 0.5rem;
     }
+  }
 }
 
 @media (min-width: calc(bp.$bp0 + 1px)) and (max-width: bp.$bp1) {
-    .comment-card {
-        &__toolbar {
-            gap: 2rem;
-        }
+  .comment-card {
+    &__toolbar {
+      gap: 2rem;
     }
+  }
 }
