--- a/public/stylesheets/views/components/card/blogPostCard/_blog-post-card.scss
+++ b/public/stylesheets/views/components/card/blogPostCard/_blog-post-card.scss
@@ -1,90 +1,90 @@
-@use '../../../../globalSassVars/colors';
-@use '../../../../globalSassVars/font-sizes' as fSizes;
-@use '../../../../globalSassVars/icon-sizes' as iSizes;
-@use '../../../../globalSassVars/break-points' as bp;
-@use '../../../../globalMixins/text-cutoff';
-@use 'modifiers' as mod;
-@use 'vars';
+@use "../../../../globalSassVars/colors";
+@use "../../../../globalSassVars/font-sizes" as fSizes;
+@use "../../../../globalSassVars/icon-sizes" as iSizes;
+@use "../../../../globalSassVars/break-points" as bp;
+@use "../../../../globalMixins/text-cutoff";
+@use "modifiers" as mod;
+@use "vars";
 
 .blog-post-card {
-    &__article {
-        display: flex;
-        width: vars.$width-medium;
-        height: vars.$height-medium;
-        border: 2px solid colors.$border;
-    }
+  &__article {
+    display: flex;
+    width: vars.$width-medium;
+    height: vars.$height-medium;
+    border: 2px solid colors.$border;
+  }
 
-    &__stat-list {
-        display: flex;
-        padding: 1rem;
-        border-right: 2px solid colors.$border;
-    }
+  &__stat-list {
+    display: flex;
+    padding: 1rem;
+    border-right: 2px solid colors.$border;
+  }
 
-    &__overview {
-        width: 100%;
-        background-size: cover;
-    }
+  &__overview {
+    width: 100%;
+    background-size: cover;
+  }
 
-    &__overlay {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: 1rem;
-        height: 100%;
-        width: 100%;
-        padding: 1rem;
-        background-color: rgba(0, 0, 0, 0.65);
-    }
+  &__overlay {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.65);
+  }
 
-    &__author-date {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 0.5rem;
-        margin-bottom: 1rem;
-    }
+  &__author-date {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
 
-    &__title {
-        @include text-cutoff.cut(3);
-        margin: 0;
-        font-size: fSizes.$larger;
-        word-break: break-word;
-    }
+  &__title {
+    @include text-cutoff.cut(3);
+    margin: 0;
+    font-size: fSizes.$larger;
+    word-break: break-word;
+  }
 
-    &__preview {
-        @include text-cutoff.cut(3);
-        word-break: break-word;
-        margin: 0;
-    }
+  &__preview {
+    @include text-cutoff.cut(3);
+    word-break: break-word;
+    margin: 0;
+  }
 
-    &__keywords-container {
-        display: flex;
-        gap: 1rem;
-    }
+  &__keywords-container {
+    display: flex;
+    gap: 1rem;
+  }
 
-    &__keywords-heading {
-        font-weight: bold;
-    }
+  &__keywords-heading {
+    font-weight: bold;
+  }
 
-    &__keywords {
-        @include text-cutoff.cut(1);
-        word-break: break-word;
-        padding-right: 1rem;
-    }
+  &__keywords {
+    @include text-cutoff.cut(1);
+    word-break: break-word;
+    padding-right: 1rem;
+  }
 
-    &.-small {
-        @include mod.small();
-    }
+  &.-small {
+    @include mod.small();
+  }
 
-    &.-smaller {
-        @include mod.smaller();
-    }
+  &.-smaller {
+    @include mod.smaller();
+  }
 }
 
 @media (max-width: bp.$bp0) {
-    @include mod.smaller();
+  @include mod.smaller();
 }
 
 @media (min-width: calc(bp.$bp0 + 1px)) and (max-width: bp.$bp1) {
-    @include mod.small();
+  @include mod.small();
 }
