--- a/public/stylesheets/views/components/form/_logging-form.scss
+++ b/public/stylesheets/views/components/form/_logging-form.scss
@@ -1,8 +1,8 @@
-@use '../../../globalSassVars/font-sizes' as fSizes;
+@use "../../../globalSassVars/font-sizes" as fSizes;
 
 .logging-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
 }
