--- a/public/stylesheets/views/components/form/_searchbar.scss
+++ b/public/stylesheets/views/components/form/_searchbar.scss
@@ -1,21 +1,19 @@
-@use '../../../globalSassVars/colors';
-@use '../../../globalSassVars/font-sizes' as fSizes;
-@use '../../../globalSassVars/icon-sizes' as iSizes;
-
+@use "../../../globalSassVars/colors";
+@use "../../../globalSassVars/font-sizes" as fSizes;
+@use "../../../globalSassVars/icon-sizes" as iSizes;
 
 .searchbar {
-    display: flex;
-    gap: 10px;
-    padding: 0.5rem 1rem;
-    border-radius: 25px;
-    background-color: colors.$bg2;
+  display: flex;
+  gap: 10px;
+  padding: 0.5rem 1rem;
+  border-radius: 25px;
+  background-color: colors.$bg2;
 
-    &__input {
-        width: 100%;
-        font-size: fSizes.$large;
-        background: none;
-        border: none;
-        color: colors.$textLight;
-    }
+  &__input {
+    width: 100%;
+    font-size: fSizes.$large;
+    background: none;
+    border: none;
+    color: colors.$textLight;
+  }
 }
-
