--- a/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
@@ -1,54 +1,55 @@
-@use '../../../globalSassVars/font-sizes' as fSizes;
+@use "../../../globalSassVars/font-sizes" as fSizes;
 
 .blog-post-fragment {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+
+  &__title {
+    font-size: fSizes.$larger;
+    font-weight: bold;
+    word-break: break-word;
+    text-transform: capitalize;
+  }
+
+  &__thumbnail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 60%;
+    aspect-ratio: 4/3;
+    margin-left: auto;
+    margin-right: auto;
+
+    &.-empty {
+      border: 2px dashed white;
+      font-size: fSizes.$large;
+    }
+  }
+
+  &__metadata {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 100%;
-    height: 100%;
+  }
 
-    &__title {
-        font-size: fSizes.$larger;
-        font-weight: bold;
-        word-break: break-word;
-        text-transform: capitalize;
+  &__content {
+    img {
+      width: 60%;
     }
 
-    &__thumbnail {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 60%;
-        aspect-ratio: 4/3;
-        margin-left: auto;
-        margin-right: auto;
-        
-        &.-empty {
-            border: 2px dashed white;
-            font-size: fSizes.$large;
-        }
+    div {
+      padding-left: 0.5rem;
+      white-space: pre-wrap;
     }
 
-    &__metadata {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+    ul,
+    ol {
+      list-style-type: initial;
+      padding-left: 2rem;
     }
-
-    &__content {
-        img {
-            width: 60%;
-        }
-
-        div {
-            padding-left: 0.5rem;
-            white-space: pre-wrap;
-        }
-
-        ul, ol {
-            list-style-type: initial;
-            padding-left: 2rem;
-        }
-    }
+  }
 }
