--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -1,59 +1,59 @@
-@use '../../../globalSassVars/colors';
-@use '../../../globalSassVars/font-sizes' as fSizes;
-@use '../../../globalMixins/text-cutoff';
-@use '../../../globalSassVars/break-points' as bp;
+@use "../../../globalSassVars/colors";
+@use "../../../globalSassVars/font-sizes" as fSizes;
+@use "../../../globalMixins/text-cutoff";
+@use "../../../globalSassVars/break-points" as bp;
 
 .blog-post-item {
-    padding: 0.5rem;
-    border-bottom: 2px solid colors.$border;
+  padding: 0.5rem;
+  border-bottom: 2px solid colors.$border;
 
-    &:hover {
-        background-color: colors.$button;
-    }
+  &:hover {
+    background-color: colors.$button;
+  }
 
-    &__article {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+  &__article {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-    &__top {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+  &__top {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-    &__bottom {
-        display: flex;
-        justify-content: space-between;
-    }
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    &__title {
-        @include text-cutoff.cut(3);
-        flex: 3;
-        font-size: fSizes.$large;
-        word-break: break-word;
-    }
+  &__title {
+    @include text-cutoff.cut(3);
+    flex: 3;
+    font-size: fSizes.$large;
+    word-break: break-word;
+  }
 
-    &__date-group {
-        flex: 1;
-        display: flex;
-        gap: 2rem;
-    }
+  &__date-group {
+    flex: 1;
+    display: flex;
+    gap: 2rem;
+  }
 }
 
 @media (max-width: bp.$bp0) {
-    .blog-post-item {
-        &__bottom {
-            .blog-post-item__reaction-list {
-                gap: 1rem;
-            }
-        }
-
-        &__actions {
-            .icon-element-list {
-                gap: 1rem;
-            }
-        }
+  .blog-post-item {
+    &__bottom {
+      .blog-post-item__reaction-list {
+        gap: 1rem;
+      }
     }
+
+    &__actions {
+      .icon-element-list {
+        gap: 1rem;
+      }
+    }
+  }
 }
