--- a/public/stylesheets/views/components/toolbar/_navbar-dropdown.scss
+++ b/public/stylesheets/views/components/toolbar/_navbar-dropdown.scss
@@ -1,27 +1,29 @@
-@use '../../../globalSassVars/colors';
-@use '../../../globalSassVars/layout';
-@use '../../../globalSassVars/break-points' as bp;
+@use "../../../globalSassVars/colors";
+@use "../../../globalSassVars/layout";
+@use "../../../globalSassVars/break-points" as bp;
 
 .navbar-dropdown {
-    width: 100%;
-    overflow-y: auto;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .navbar-dropdown-container {
-    display: flex;
-    position: fixed;
-    z-index: 1;
-    height: 50vh;
-    width: 60%;
-    padding: 1rem;
-    padding-top: calc(max(layout.$navbar-height, layout.$navbar-min-height) + 1rem);
-    border: 2px solid colors.$border;
-    background-color: colors.$bg0;
-    overflow: hidden;
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  height: 50vh;
+  width: 60%;
+  padding: 1rem;
+  padding-top: calc(
+    max(layout.$navbar-height, layout.$navbar-min-height) + 1rem
+  );
+  border: 2px solid colors.$border;
+  background-color: colors.$bg0;
+  overflow: hidden;
 }
 
 @media (max-width: bp.$bp1) {
-    .navbar-dropdown-container {
-        width: 100%;
-    }
+  .navbar-dropdown-container {
+    width: 100%;
+  }
 }
