--- a/public/stylesheets/views/components/toolbar/_sidebar.scss
+++ b/public/stylesheets/views/components/toolbar/_sidebar.scss
@@ -1,115 +1,119 @@
-@use '../../../globalSassVars/colors';
-@use '../../../globalSassVars/font-sizes' as fSizes;
-@use '../../../globalSassVars/layout';
-@use '../../../globalSassVars/break-points' as bp;
+@use "../../../globalSassVars/colors";
+@use "../../../globalSassVars/font-sizes" as fSizes;
+@use "../../../globalSassVars/layout";
+@use "../../../globalSassVars/break-points" as bp;
 
 .sidebar {
+  width: 100%;
+  overflow-y: auto;
+  padding: 1rem;
+
+  &__index-link {
+    margin-bottom: 1rem;
+  }
+
+  &__account-section,
+  &__content-section {
     width: 100%;
-    overflow-y: auto;
-    padding: 1rem;
+  }
 
-    &__index-link {
-        margin-bottom: 1rem;
-    }
+  &__expandable {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+  }
 
-    &__account-section, &__content-section {
-        width: 100%;
-    }
+  &__collapsable {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 
-    &__expandable {
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-        width: 100%;
-    }
+  &__heading {
+    font-size: fSizes.$larger;
+    font-weight: bold;
+    margin: 0;
+  }
 
-    &__collapsable {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-    }
+  &__subheading {
+    margin-bottom: 1rem;
+    font-size: fSizes.$large;
+    border-bottom: 2px solid colors.$border;
+  }
 
-    &__heading {
-        font-size: fSizes.$larger;
-        font-weight: bold;
-        margin: 0;
-    }
+  &__subsection {
+    margin-bottom: 1rem;
+  }
 
-    &__subheading {
-        margin-bottom: 1rem;
-        font-size: fSizes.$large;
-        border-bottom: 2px solid colors.$border;
-    }
+  &__profile-overview {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid colors.$border;
+  }
 
-    &__subsection {
-        margin-bottom: 1rem;
-    }
-
-    &__profile-overview {
-        margin-bottom: 1rem;
-        padding-bottom: 1rem;
-        border-bottom: 2px solid colors.$border;
-    }
-
-    &__logout {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 1rem;
-        padding-top: 1rem;
-        border-top: 2px solid colors.$border;
-        font-size: fSizes.$large;
-    }
+  &__logout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    padding-top: 1rem;
+    border-top: 2px solid colors.$border;
+    font-size: fSizes.$large;
+  }
 }
 
 .sidebar-container {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 30%;
-    padding-top: calc(max(layout.$navbar-height, layout.$navbar-min-height) + 1rem);
-    z-index: 10;
-    background-color: colors.$bg0;
-    border-bottom: 2px solid colors.$border;
-    border-right: 2px solid colors.$border;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 30%;
+  padding-top: calc(
+    max(layout.$navbar-height, layout.$navbar-min-height) + 1rem
+  );
+  z-index: 10;
+  background-color: colors.$bg0;
+  border-bottom: 2px solid colors.$border;
+  border-right: 2px solid colors.$border;
+  overflow: hidden;
 }
 
 .account-prompt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding-top: 1rem;
+  font-size: fSizes.$large;
+
+  &__login,
+  &__signup {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding-top: 1rem;
-    font-size: fSizes.$large;
+    width: 100%;
+    padding: 1rem;
+    border: 2px solid colors.$border;
+  }
 
-    &__login, &__signup {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        width: 100%;
-        padding: 1rem;
-        border: 2px solid colors.$border;
-    }
-
-    &__text {
-        text-align: center;
-    }
+  &__text {
+    text-align: center;
+  }
 }
 
 @media (max-width: bp.$bp0) {
-    .sidebar-container {
-        width: 100%;
-    }
+  .sidebar-container {
+    width: 100%;
+  }
 }
 
 @media (min-width: calc(bp.$bp0 + 1px)) and (max-width: bp.$bp2) {
-    .sidebar-container {
-        width: 50%;
-    }
+  .sidebar-container {
+    width: 50%;
+  }
 }
