--- a/public/stylesheets/views/layouts/_logging.scss
+++ b/public/stylesheets/views/layouts/_logging.scss
@@ -1,32 +1,32 @@
-@use '../../globalSassVars/colors';
-@use '../../globalSassVars/break-points' as bp;
+@use "../../globalSassVars/colors";
+@use "../../globalSassVars/break-points" as bp;
 
 .logging-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+
+  &__container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    width: 100%;
+    min-height: 26rem;
+    width: 32rem;
+    margin-bottom: 5%;
+    padding: 4rem;
+    border: 2px solid colors.$border;
+  }
 
-    &__container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        min-height: 26rem;
-        width: 32rem;
-        margin-bottom: 5%;
-        padding: 4rem;
-        border: 2px solid colors.$border;
-    }
-
-    &__heading {
-        margin-top: 0;
-    }
+  &__heading {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: bp.$bp0) {
-    .logging-page__container {
-        width: 100%;
-    }
+  .logging-page__container {
+    width: 100%;
+  }
 }
