--- a/public/stylesheets/views/layouts/_toolbars.scss
+++ b/public/stylesheets/views/layouts/_toolbars.scss
@@ -1,12 +1,12 @@
-@use '../../globalSassVars/break-points' as bp;
+@use "../../globalSassVars/break-points" as bp;
 
 .page-container {
-    min-height: 100vh;
-    width: 70%;
+  min-height: 100vh;
+  width: 70%;
 }
 
 @media (max-width: bp.$bp1) {
-    .page-container {
-        width: 100%;
-    }
+  .page-container {
+    width: 100%;
+  }
 }
