--- a/public/stylesheets/views/pages/_blog-post.scss
+++ b/public/stylesheets/views/pages/_blog-post.scss
@@ -1,184 +1,186 @@
-@use '../../globalSassVars/colors';
-@use '../../globalSassVars/icon-sizes' as iSizes;
-@use '../../globalSassVars/font-sizes' as fSizes;
-@use '../../globalSassVars/break-points' as bp;
-@use '../components/icon/iconElement/modifiers' as ie-mod;
-@use '../components/card/blogPostCard/modifiers' as bpc-mod;
+@use "../../globalSassVars/colors";
+@use "../../globalSassVars/icon-sizes" as iSizes;
+@use "../../globalSassVars/font-sizes" as fSizes;
+@use "../../globalSassVars/break-points" as bp;
+@use "../components/icon/iconElement/modifiers" as ie-mod;
+@use "../components/card/blogPostCard/modifiers" as bpc-mod;
 
 .blog-post-page {
-    width: 100%;
-    padding: 1rem;
-    
-    &__post-heading {
-        font-size: fSizes.$xlarge;
-        border-bottom: 4px solid colors.$border;
-    }
+  width: 100%;
+  padding: 1rem;
 
-    &__more-blogs {
-        .blog-post-card {
-            @include bpc-mod.small();
-        }
-    }
+  &__post-heading {
+    font-size: fSizes.$xlarge;
+    border-bottom: 4px solid colors.$border;
+  }
 
-    &__comment-create-form, &__reply-create-form  {
-        margin-bottom: 2rem;
-
-        .form-textarea {
-            margin-bottom: 1rem;
-        }
+  &__more-blogs {
+    .blog-post-card {
+      @include bpc-mod.small();
     }
+  }
 
-    &__reply-container {
-        margin-left: 4rem;
+  &__comment-create-form,
+  &__reply-create-form {
+    margin-bottom: 2rem;
+
+    .form-textarea {
+      margin-bottom: 1rem;
     }
+  }
+
+  &__reply-container {
+    margin-left: 4rem;
+  }
 }
 
 .blog-post {
-    &__title {
-        margin: 0;
-        border-bottom: 6px solid colors.$border;
-        font-size: fSizes.$xxlarge;
-        word-break: break-word;
+  &__title {
+    margin: 0;
+    border-bottom: 6px solid colors.$border;
+    font-size: fSizes.$xxlarge;
+    word-break: break-word;
+  }
+
+  &__metadata {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+    border-bottom: 4px solid colors.$border;
+  }
+
+  &__metadata-top {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__metadata-bottom {
+    margin-top: 1rem;
+  }
+
+  &__author-details {
+    flex: 1;
+    display: inline-block;
+  }
+
+  &__reaction-list {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  &__reaction-button {
+    gap: 0.5rem;
+  }
+
+  &__date {
+    flex: 1;
+    text-align: right;
+  }
+
+  &__thumbnail {
+    margin-right: auto;
+    margin-left: auto;
+    width: 75%;
+  }
+
+  &__content {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+    ul,
+    ol {
+      list-style-type: initial;
+      padding-left: 2rem;
     }
 
-    &__metadata {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin-bottom: 2rem;
-        border-bottom: 4px solid colors.$border;
+    img {
+      width: 75%;
     }
+  }
 
-    &__metadata-top {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__metadata-bottom {
-        margin-top: 1rem;
-    }
-
-    &__author-details {
-        flex: 1;
-        display: inline-block;
-    }
-
-    &__reaction-list {
-        flex: 2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-    }
-
-    &__reaction-button {
-        gap: 0.5rem;
-    }
-
-    &__date {
-        flex: 1;
-        text-align: right;
-    }
-
-    &__thumbnail {
-        margin-right: auto;
-        margin-left: auto;
-        width: 75%;
-    }
-
-    &__content {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-
-        ul, ol {
-            list-style-type: initial;
-            padding-left: 2rem;
-        }
-
-        img {
-            width: 75%;
-        }
-    }
-
-    &__post-blog-separator {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        border-top: 4px solid colors.$border;
-        border-bottom: 4px solid colors.$border;
-    }
+  &__post-blog-separator {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-top: 4px solid colors.$border;
+    border-bottom: 4px solid colors.$border;
+  }
 }
 
 @media (max-width: bp.$bp0) {
-    .blog-post {
-        &__title {
-            font-size: fSizes.$larger;
-        }
-
-        &__reaction-button {
-            gap: 0.1rem;
-        }
+  .blog-post {
+    &__title {
+      font-size: fSizes.$larger;
     }
 
-    .blog-post-page {
-        &__post-heading {
-            font-size: fSizes.$larger;
-        }
-
-        &__more-blogs {
-            .blog-post-card {
-                @include bpc-mod.smaller();
-            }
-        }
-
-        &__reply-container {
-            margin-left: 1.5rem;
-        }
+    &__reaction-button {
+      gap: 0.1rem;
     }
+  }
+
+  .blog-post-page {
+    &__post-heading {
+      font-size: fSizes.$larger;
+    }
+
+    &__more-blogs {
+      .blog-post-card {
+        @include bpc-mod.smaller();
+      }
+    }
+
+    &__reply-container {
+      margin-left: 1.5rem;
+    }
+  }
 }
 
 @media (min-width: calc(bp.$bp0 + 1px)) and (max-width: bp.$bp1) {
-    .blog-post {
-        &__title {
-            font-size: fSizes.$xlarge;
-        }
-
-        &__author-details {
-            .icon-element {
-                @include ie-mod.large();
-            }
-        }
+  .blog-post {
+    &__title {
+      font-size: fSizes.$xlarge;
     }
 
-    .blog-post-page {
-        &__post-heading {
-            font-size: fSizes.$xlarge;
-        }
-
-        &__reply-container {
-            margin-left: 3rem;
-        }
+    &__author-details {
+      .icon-element {
+        @include ie-mod.large();
+      }
     }
+  }
+
+  .blog-post-page {
+    &__post-heading {
+      font-size: fSizes.$xlarge;
+    }
+
+    &__reply-container {
+      margin-left: 3rem;
+    }
+  }
 }
 
 @media (max-width: bp.$bp1) {
-    .blog-post {
-        &__metadata-top {
-            .blog-post__reaction-list {
-                display: none;
-            }
-        }
+  .blog-post {
+    &__metadata-top {
+      .blog-post__reaction-list {
+        display: none;
+      }
     }
+  }
 }
 
 @media (min-width: calc(bp.$bp1 + 1px)) {
-    .blog-post {
-        &__author-details {
-            .icon-element {
-                @include ie-mod.larger();
-            }
-        }
-
-        &__metadata-bottom {
-            display: none;
-        }
+  .blog-post {
+    &__author-details {
+      .icon-element {
+        @include ie-mod.larger();
+      }
     }
+
+    &__metadata-bottom {
+      display: none;
+    }
+  }
 }
