--- a/views/components/form/formSelect.pug
+++ b/views/components/form/formSelect.pug
@@ -1,22 +1,14 @@
 mixin formSelect(name, options, defaultOption=null, attrs={})
-    .form-select&attributes(attrs.formSelect)
-        - const labelWords = name.split('-')
-        each word, index in labelWords
-            - labelWords[index] = word[0].toUpperCase() + word.slice(1)
+  .form-select&attributes(attrs.formSelect)
+    - const labelWords = name.split("-")
+    each word, index in labelWords
+      - labelWords[index] = word[0].toUpperCase() + word.slice(1)
 
-        label.form-select__label(
-            for=name
-        )= labelWords.join(' ')
-        select.form-select__select(
-            id=name
-            name=name
-        )&attributes(attrs.select)
-            each option in options
-                - const optionWords = option.split('-')
-                each word, index in optionWords
-                    - optionWords[index] = word[0].toUpperCase() + word.slice(1)
-                
-                option(
-                    value=option,
-                    selected=(option === defaultOption)
-                )= optionWords.join(' ')
+    label.form-select__label(for=name)= labelWords.join(" ")
+    select.form-select__select(id=name, name=name)&attributes(attrs.select)
+      each option in options
+        - const optionWords = option.split("-")
+        each word, index in optionWords
+          - optionWords[index] = word[0].toUpperCase() + word.slice(1)
+
+        option(value=option, selected=option === defaultOption)= optionWords.join(" ")
