--- a/views/components/icon/svg/searchIcon.pug
+++ b/views/components/icon/svg/searchIcon.pug
@@ -1,4 +1,4 @@
 mixin searchIcon(attrs={})
-	svg(viewBox="0 0 24 24")&attributes(attrs)
-		path(stroke="none" d="M0 0h24v24H0z")
-		path(d="M3 10a7 7 0 1 0 14 0 7 7 0 1 0-14 0M21 21l-6-6")
+  svg(viewBox="0 0 24 24")&attributes(attrs)
+    path(stroke="none", d="M0 0h24v24H0z")
+    path(d="M3 10a7 7 0 1 0 14 0 7 7 0 1 0-14 0M21 21l-6-6")
