--- a/views/components/icon/svg/writeIcon.pug
+++ b/views/components/icon/svg/writeIcon.pug
@@ -1,4 +1,6 @@
 mixin writeIcon(attrs={})
-	svg(viewBox="0 0 24 24")&attributes(attrs)
-		path(stroke="none" d="M0 0h24v24H0z")
-		path(d="M20 17V5c0-1.121-.879-2-2-2s-2 .879-2 2v12l2 2 2-2zM16 7h4M18 19H5a2 2 0 1 1 0-4h4a2 2 0 1 0 0-4H6")
+  svg(viewBox="0 0 24 24")&attributes(attrs)
+    path(stroke="none", d="M0 0h24v24H0z")
+    path(
+      d="M20 17V5c0-1.121-.879-2-2-2s-2 .879-2 2v12l2 2 2-2zM16 7h4M18 19H5a2 2 0 1 1 0-4h4a2 2 0 1 0 0-4H6"
+    )
