--- a/views/components/list/iconElementList.pug
+++ b/views/components/list/iconElementList.pug
@@ -1,30 +1,25 @@
 include ../icon/iconElement
 
 mixin iconElementList(items, attrs={})
-    ul.icon-element-list&attributes(attrs.iconElementList)
-        - attrs.iconElement ??= {}
-        - attrs.iconElement.class ??= []
-        - let sharedClasses = attrs.iconElement.class
+  ul.icon-element-list&attributes(attrs.iconElementList)
+    - attrs.iconElement ??= {}
+    - attrs.iconElement.class ??= []
+    - let sharedClasses = attrs.iconElement.class
 
-        if typeof sharedClasses === 'string'
-            - sharedClasses = sharedClasses.split(' ')
-            
-        each item in items
-            - item.label ??= null
-            - item.attrs ??= {}
-            - item.attrs.class ??= []
-            - let itemClasses = item.attrs.class
+    if typeof sharedClasses === 'string'
+      - sharedClasses = sharedClasses.split(" ")
 
-            if typeof itemClasses === 'string'
-                - itemClasses = itemClasses.split(' ')
-            
-            - item.attrs.class = [...sharedClasses, ...itemClasses]
-     
-            //- Place attrs.iconElement before item.attrs to allow for overriding
-            li.icon-element-list__item 
-                +iconElement(
-                    item.tag,
-                    item.icon,  
-                    item.label,
-                    {...attrs.iconElement, ...item.attrs}
-                )
+    each item in items
+      - item.label ??= null
+      - item.attrs ??= {}
+      - item.attrs.class ??= []
+      - let itemClasses = item.attrs.class
+
+      if typeof itemClasses === 'string'
+        - itemClasses = itemClasses.split(" ")
+
+      - item.attrs.class = [...sharedClasses, ...itemClasses]
+
+      //- Place attrs.iconElement before item.attrs to allow for overriding
+      li.icon-element-list__item
+        +iconElement(item.tag, item.icon, item.label, {...attrs.iconElement, ...item.attrs})
