--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -2,19 +2,19 @@ doctype html
 html(lang="en")
   head
     title= data.title
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(charset="utf-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(
-      name='description' 
-      content='A place for reading blog posts by coders and tech enthusiasts.'
+      name="description",
+      content="A place for reading blog posts by coders and tech enthusiasts."
     )
-    link(rel='icon' type='image/x-icon' href='/images/favicon.png')
-    link(rel='stylesheet' href='/stylesheets/style.css')
-    script(nonce=nonce). 
+    link(rel="icon", type="image/x-icon", href="/images/favicon.png")
+    link(rel="stylesheet", href="/stylesheets/style.css")
+    script(nonce=nonce).
       const backendData = !{JSON.stringify(data)};
     if (usingTinyMCE)
-      script(defer type='module' src='/tinymce/tinymce.min.js')
-    script(defer type='module' src='/javascripts/bundle.js')
+      script(defer, type="module", src="/tinymce/tinymce.min.js")
+    script(defer, type="module", src="/javascripts/bundle.js")
 
   body
     block content
